fix: adjust h5 margin and improve button alignment in overlay controls

--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,10 @@ h5 {
   line-height: 1.1;
 }
 
+h5 {
+  margin: 7px;
+}
+
 p,
 a {
   font-family: var(--lato-font);
@@ -185,10 +189,8 @@ a:hover {
   text-align: center;
   text-decoration: none;
   align-items: center;
-  /* letter-spacing: 0.1em; */
-  font-weight: 500;
-  font-size: 0.5rem;
-  color: #000;
+  display: flex;
+  justify-content: center;
   border-radius: 100%;
   transition: 0.5s;
   width: 75px !important;
@@ -479,7 +481,7 @@ a:hover {
 }
 
 .overlay-controls {
-  position:absolute;
+  position: absolute;
   bottom: 1.5em;
   display: flex;
   width: 100%;
@@ -813,6 +815,8 @@ a:hover {
 }
 
 .profile-image-preview {
+  display: flex;
+  align-items: center;
   cursor: pointer;
   height: 6em;
   width: 6em;
